--- a/polymarket-explorer/package.json
+++ b/polymarket-explorer/package.json
@@ -19,7 +19,8 @@
 "@radix-ui/react-dialog": "^1.1.1",
 "@radix-ui/react-scroll-area": "^1.1.0",
 "@radix-ui/react-select": "^2.0.0",
-"@radix-ui/react-slot": "^2.0.0",
+"@radix-ui/react-slot": "2.0.1",
+"@radix-ui/react-tabs": "^1.0.4",
 "class-variance-authority": "^0.7.0",
 "clsx": "^2.1.1",
 "tailwind-merge": "^2.4.0"
